crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__attention_scores_small.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: scores
---
AttentionScores {
    weights: [
        0.5,
        0.3,
        0.2,
        0.1,
        0.6,
        0.3,
        0.0,
        0.0,
        1.0,
    ],
    seq_len: 3,
    kv_len: 3,
}
