crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__cache_stats_initial.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: stats
---
CacheStats {
    entries_per_layer: [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
    ],
    memory_bytes: 0,
    hit_rate: 1.0,
    avg_access_time_us: 0.0,
}
