crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__conv1d_config_basic.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
Conv1dConfig {
    in_channels: 256,
    out_channels: 512,
    kernel_size: 3,
    stride: 1,
    padding: Zero(
        1,
    ),
    dilation: 1,
    groups: 1,
    bias: true,
}
