crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__conv1d_config_dilated.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
Conv1dConfig {
    in_channels: 64,
    out_channels: 64,
    kernel_size: 3,
    stride: 1,
    padding: Zero(
        2,
    ),
    dilation: 2,
    groups: 1,
    bias: true,
}
