crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__cpu_rope_config_custom_base.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
RopeConfig {
    head_dim: 128,
    max_seq_len: 8192,
    base: 500000.0,
    scaling_factor: 1.0,
}
