crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__cpu_rope_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
RopeConfig {
    head_dim: 64,
    max_seq_len: 2048,
    base: 10000.0,
    scaling_factor: 1.0,
}
